mpeg4videoparse: accept VideoObjectLayer as start of frame and config

... which it deserves as much as VideoObject.

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=667564